--- a/public/results.html
+++ b/public/results.html
@@ -6,6 +6,9 @@
   <title>Results - Drive Mzansi</title>
   <!-- Path to the CSS file -->
   <link rel="stylesheet" href="css/style.css">
+  <!-- Firebase SDK -->
+  <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-firestore.js"></script>
 </head>
 <body>
   <!-- Header with Navigation -->
@@ -34,6 +37,21 @@
 
   <!-- JavaScript for Calculating and Displaying Results -->
   <script>
+    // Firebase configuration
+    const firebaseConfig = {
+      apiKey: "AiZaSyCglZk-B-Phojvp31xGxxxACfyO4w6lges",
+      authDomain: "drive-mzansi-app.firebaseapp.com",
+      projectId: "drive-mzansi-app",
+      storageBucket: "drive-mzansi-app.appspot.com",
+      messagingSenderId: "1007195133421",
+      appId: "1:1007195133421:web:1b7ec3cd063a31c05543e4",
+      measurementId: "G-WGTMR2MFRY"
+    };
+
+    // Initialize Firebase
+    const app = firebase.initializeApp(firebaseConfig);
+    const db = firebase.firestore(app);
+
     // Correct answers for the quiz
     const correctAnswers = {
       'control-question1': 'C',
@@ -48,7 +66,7 @@
     };
 
     // Function to display results
-    function displayResults() {
+    async function displayResults() {
       // Retrieve user answers from localStorage
       const userAnswers = JSON.parse(localStorage.getItem('userAnswers')) || {};  // Default to empty object if no answers
 
@@ -84,14 +102,22 @@
       document.getElementById('score').textContent = `You got ${score} out of ${totalQuestions}.`;
       document.getElementById('percentage').textContent = `Your score is ${percentage.toFixed(2)}%.`;
 
-      // Save the latest result to localStorage for record
-      const pastResults = JSON.parse(localStorage.getItem('testResults')) || [];
-      pastResults.push({
-        score: score,
-        percentage: percentage,
-        date: new Date().toLocaleDateString()
-      });
-      localStorage.setItem('testResults', JSON.stringify(pastResults));
+      // Save the latest result to Firestore
+      const userId = "currentUserId";  // Replace this with the logged-in user's ID (from Firebase Authentication)
+      const resultsRef = db.collection('testResults').doc(userId);
+
+      // Add the result to Firestore (appending the latest result)
+      try {
+        await resultsRef.update({
+          results: firebase.firestore.FieldValue.arrayUnion({
+            score: score,
+            percentage: percentage,
+            date: new Date().toLocaleDateString()
+          })
+        });
+      } catch (error) {
+        console.error("Error saving results:", error);
+      }
     }
 
     // Function to restart the quiz
